# template2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.devcontainer/: devcontainer.json  postCreate.sh
.github/: auto-assign.yml  dependabot.yml  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: README.md  ai-development-team.yml  auto-label.yml  auto-merge-dependabot.yml  auto-release.yml  automation-showcase.yml  ci-multi-language.yml  codeql-analysis.yml  dependency-review.yml  deploy-pages.yml  marketplace-showcase.yml  multi-cloud-deployment.yml  performance-benchmarks.yml  security-compliance-suite.yml  snyk-container.yml  testing-quality-suite.yml
ai-configs/: copilot-config.yml
docs/: ARCHITECTURE.md
examples/ai-ml/config/: model-configs.md
examples/ai-ml/crewai-dev-team/: .env.example  README.md  crew.py  requirements.txt
examples/go/: Dockerfile  go.mod
examples/go/cmd/: main.go
examples/java/: pom.xml
examples/java/src/main/java/com/template2/example/: Template2JavaExampleApplication.java
examples/nodejs/: Dockerfile  package.json
examples/nodejs/src/: index.ts
examples/python/: Dockerfile  pyproject.toml
examples/python/src/: main.py
examples/python/tests/: test_main.py
prompts/: code-review-prompts.md  development-prompts.md
scripts/: run-crewai-team.sh  setup.sh
